<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">의무통화</string>
    <string name="TAG">ObligationCall</string>
    <string name="setting_text">설정</string>
    <string name="phone_number">전화번호</string>
    <string name="phone_number_hint">상대방 전화번호</string>
    <string name="how_many_months">몇달동안?</string>
    <string name="how_many_months_hint">의무 개월</string>
    <string name="how_many_calls">몇통화?</string>
    <string name="how_many_calls_hint">한달 의무통화 수</string>
    <string name="how_many_times">몇시에?</string>
    <string name="how_many_times_hint">전화하는 시간(0~23)</string>
    <string name="submit_btn">설정완료</string>
    <string name="reset_btn">설정 초기화</string>
    <string name="colon_text">:</string>
    <string name="digi_link_bak">의무통화 전화번호 정보 &lt;a href=http://digi.kr>http://digi.kr&lt;/a>&lt;br&gt;이 앱은 위 사이트와는 무관합니다</string>
    <string name="digi_link">의무통화 전화번호 정보는&lt;br&gt; 제작자 요청에 의해 삭제 되었습니다.</string>
    <string name="give_text">&lt;a href=https://play.google.com/store/apps/details?id=com.helloyako.obligationcall.give&gt;개발자에게 기부하러 가기&lt;/a&gt;</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="test_string">2014년 00월11일 10시</string>
    <string name="done_string">완료</string>
    <string name="alert_message">정말로 초기화 하시겠습니까?</string>

    <string name="toast_setting_done">설정 완료 되었습니다.</string>
    <string name="toast_months_watcher">1~12달만 입력 가능합니다</string>
    <string name="toast_calls_watcher">1~30회만 입력 가능 합니다</string>
    <string name="toast_times_watcher">0~23시만 입력 가능 합니다</string>

    <string name="preferences_is_setting_key">isSetting</string>
    <string name="preferences_phone_number_key">phoneNumber</string>

    <string name="bundle_index_key">index</string>
    <string name="bundle_phone_number_key">phoneNumber</string>

    <string name="progress_dialog_setting_message">데이터 저장중</string>
    <string name="progress_dialog_loading_message">데이터 로딩중</string>
    <string name="progress_dialog_reset_message">데이터 초기화중</string>

    <string name="date_format">yy년 MM월 dd일 HH시 mm분</string>

    <string name="call_info_message">의무통화가 전화를 거는 중입니다.</string>

</resources>
