<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <TextView
        android:id="@+id/setting_digi_text"
        style="@style/ShadowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stripe_repeat"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text"
        android:textColorLink="@color/text_link" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="@dimen/setting_text_width"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/phone_number"
                style="@style/ShadowText"
                android:textColor="@color/text"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/colon_text"
                style="@style/ShadowText"
                android:textColor="@color/text"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"/>

            <EditText
                style="@style/SignInEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:inputType="phone"
                android:maxLines="1"
                android:hint="@string/phone_number_hint"
                android:id="@+id/PhoneNumberEditText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="@dimen/setting_text_width"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/how_many_months"
                style="@style/ShadowText"
                android:textColor="@color/text"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/colon_text"
                style="@style/ShadowText"
                android:textColor="@color/text"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"/>

            <EditText
                style="@style/SignInEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:maxLength="2"
                android:hint="@string/how_many_months_hint"
                android:id="@+id/MonthsEditText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="@dimen/setting_text_width"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/how_many_calls"
                style="@style/ShadowText"
                android:textColor="@color/text"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/colon_text"
                style="@style/ShadowText"
                android:textColor="@color/text"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"/>

            <EditText
                style="@style/SignInEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:maxLength="2"
                android:hint="@string/how_many_calls_hint"
                android:id="@+id/CallsEditText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                style="@style/ShadowText"
                android:layout_width="@dimen/setting_text_width"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/how_many_times"
                android:textColor="@color/text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/colon_text"
                style="@style/ShadowText"
                android:textColor="@color/text"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"/>

            <EditText
                style="@style/SignInEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:maxLength="2"
                android:hint="@string/how_many_times_hint"
                android:id="@+id/TimesEditText"/>
        </LinearLayout>

        <Button
            android:id="@+id/SubmitButton"
            style="@style/ShadowText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background_states"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/submit_btn"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:enabled="false"
            android:onClick="onClickSubmitButton"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/setting_give_text"
            style="@style/ShadowText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stripe_repeat"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text"
            android:textColorLink="@color/text_link"
            android:layout_alignParentBottom="true"/>
        </RelativeLayout>
</LinearLayout>